Attempt to clean style.css + fix navbar padding/overflow

--- a/style.css
+++ b/style.css
@@ -9,21 +9,133 @@
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
 
-#centerP {
-  margin:auto;
-  padding-top: 5px;
-  width:200px;
+/**
+ * General
+ **/
+
+body {
+  padding-top: 70px;
 }
 
-#JI_slider {
-  max-width: 800px;
-  margin: auto;
+.footer {
+  position:fixed;
+  bottom:0px;
+  background-color: #EDEDED;
+  width:100%;
+  height:50px;
+  vertical-align : middle;
 }
 
-#carousel-example-generic {
-  max-width:400px;
-  margin:auto;
+h2 {
+  color : #aa0000;
+  padding-left: 40px;
 }
+
+/**
+ * Navigation
+ **/
+
+.navbar {
+  background-color : #aa0000;
+}
+
+.navbar-nav {
+  margin:auto;
+  max-width:610px;
+  float:none;
+}
+
+.navbar-dropdown-toggle {
+  float: left;
+  display: inline-block;
+}
+
+#menuLink a{
+  color: #ffffff;
+}
+
+.dropdown-menu {
+  background-color : black;
+  border-bottom-left-radius : 20px;
+  border-bottom-right-radius : 20px;
+  overflow: hidden;
+}
+
+.dropdown-menu a:hover {
+  background-color: black;
+}
+
+.navbar-brand {
+  padding-left:5 px;
+  padding-top:5px;
+  padding-bottom:0px;
+  padding-right:0px;
+  max-height:50px;
+  max-width:200px;
+}
+
+.navbar-countdown {
+  position: fixed;
+  right:15px;
+  top: 15px;
+  color: white;
+}
+
+/**
+ * Structure
+ **/
+
+.leftPoster {
+  width:27%;
+  position:fixed;
+  float:left;
+  display: inline-block;
+  height:81%;
+  background-position: center center;
+  background-repeat:  no-repeat;
+  background-size: contain;
+}
+
+.rightContent {
+  background-color: white;
+  display:inline-block;
+  width:70%;
+  margin-left:30%;
+  padding-bottom: 100px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 15px;
+  margin-bottom: 15px;
+}
+
+.post {
+  text-align: justify;
+}
+.container {
+  width:100%
+}
+
+/**
+ * Posts
+ **/
+.post-title {
+  color : #aa0000;
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+}
+
+.post-info {
+  color : #aaa;
+  float: right;
+  font-style: italic;
+  font-size: 60%;
+  text-align: right;
+  font-weight: normal;
+}
+
+/**
+ * Page-specific (?)
+ **/
 
 #partenaires {
   display:inline-block;
@@ -49,97 +161,9 @@
   margin:auto;
 }
 
-h2 {
-  color : #aa0000;
-  padding-left: 40px;
-}
-/** main content */
-.leftPoster {
-  width:27%;
-  position:fixed;
-  float:left;
-  display: inline-block;
-  height:81%;
-  /*background-image: url(http://beta.japan-impact.ch/wp-content/uploads/2015/09/f4-vente.png);*/
-  background-position: center center;
-  background-repeat:  no-repeat;
-  /*background-attachment: fixed;*/
-  background-size: contain;
-}
-
-.rightContent {
-  background-color: white;
-  display:inline-block;
-  /*min-height:700px;*/
-  /*min-height:2000px;*/
-  width:70%;
-  margin-left:30%;
-  padding-bottom: 100px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 15px;
-  margin-bottom: 15px;
-}
-
-.post {
-  text-align: justify;
-}
-/* End of main content*/
-.container {
-  width:100%
-}
-
-/** Navigation menu */
-.navbar {
-  background-color : #aa0000;
-}
-
-.navbar-nav {
-  margin:auto;
-  max-width:610px;
-  float:none;
-}
-
-#menuLink a{
-  color: #ffffff;
-}
-
-.dropdown-menu {
-  background-color : black;
-  border-bottom-left-radius : 20px;
-  border-bottom-right-radius : 20px;
-}
-
-.dropdown-menu a:hover {
-  background-color: black;
-}
-
-.navbar-brand {
-  padding-left:5 px;
-  padding-top:5px;
-  padding-bottom:0px;
-  padding-right:0px;
-  max-height:50px;
-  max-width:200px;
-}
-
-.navbar-countdown {
-  position: fixed;
-  right:15px;
-  top: 15px;
-  color: white;
-}
-
-/* End of navigation menu */
-
-footer {
-  position:fixed;
-  bottom:0px;
-  background-color: #EDEDED;
-  width:100%;
-  height:50px;
-  vertical-align : middle;
-}
+/**
+ * Misc
+ **/
 
 .languages {
   position: absolute;
@@ -152,12 +176,13 @@ footer {
   list-style: none;
 }
 
-/* static menu */
-body {
-  padding-top: 70px;
+.sfsiplus_norm_row { /* plugin? */
+  width: 100% !important;
 }
 
-/** media for mobile */
+/**
+ * Mobile
+ **/
 
 @media (max-width: 767px) {
   .leftPoster{
@@ -167,12 +192,6 @@ body {
   .rightContent{
     width:100%;
     margin-left:0%;
-    /*padding: 0px;*/
-    /* fonctionne mais moche
-    background-image: url("../../images/Entry2.jpg");
-    background-position: center center;
-    background-repeat:  no-repeat;
-    background-size: contain;*/
   }
 
   .navbar-countdown  {
@@ -187,19 +206,17 @@ body {
     float:none !important;
   }
 
-  /* Plugin style */
-  .sfsi_plus_wicons {
+  .sfsi_plus_wicons { /* plugin? */
     width: 30px !important;
     height: 30px !important;
   }
 
-  .sfsiplus_norm_row {
+  .sfsiplus_norm_row { /* plugin? */
     text-align: left !important;
     top: 10px;
   }
 }
 
-/* media for low resolution */
 @media (max-width: 1200px) {
 
   .navbar-countdown  {
@@ -209,27 +226,4 @@ body {
   .navbar-nav {
     float:right;
   }
-}
-
-/* End of media for mobile */
-
-/* Post style */
-.post-title {
-  color : #aa0000;
-  border-bottom: 1px solid #ddd;
-  text-align: left;
-}
-
-.post-info {
-  color : #aaa;
-  float: right;
-  font-style: italic;
-  font-size: 60%;
-  text-align: right;
-  font-weight: normal;
-}
-
-/* plugin style */
-.sfsiplus_norm_row {
-  width: 100% !important;
 }
